--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,24 @@
-package com.example.maricools_app_designs.adapters
-
-import android.view.LayoutInflater
-import android.view.ViewGroup
-import android.widget.Filter
-import android.widget.Filterable
-import androidx.recyclerview.widget.RecyclerView
-import com.example.maricools_app_designs.R
-import com.example.maricools_app_designs.`interface`.onPrayerItemClickListener
-import com.example.maricools_app_designs.databinding.PrayerHeaderBinding
-import com.example.maricools_app_designs.databinding.PrayerSingleItemBinding
-import kotlinx.android.synthetic.main.prayer_header.view.*
-import java.util.*
-
-class PrayerFragmentMainScreenAdapter(val header: String, var myList: MutableList<String>) :
-    RecyclerView.Adapter<RecyclerView.ViewHolder>(), Filterable {
-
-    private val TYPE_HEADER: Int = 0
-    private val TYPE_ITEM: Int = 1
-    var filteredList: MutableList<String>
-
-    init {
-          filteredList = myList.toMutableList()
-    }
-
-    lateinit var itemClickListener: onPrayerItemClickListener
-
-    fun setOnItemClickListener(listener: onPrayerItemClickListener){
-        this.itemClickListener = listener
-    }
-
-    override fun onCreateViewHolder(parent: ViewGr
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx2048m
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app"s APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+org.gradle.parallel=true
+org.gradle.daemon=true
+# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=officialViewGr
+kapt.incremental.apt=true
