--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 include ':app'
-rootProject.name = "Know Your Faith For Children And Teenagers"
+rootProject.name = "KnowYourFaithForChildrenAndTeenagers"
