--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ kapt {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.work:work-runtime:2.3.4'
     def nav_version = "2.3.2"
     def lifecycle_version = "2.2.0"
 
@@ -136,6 +137,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
 
