--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     //google ads
-    implementation "com.google.android.gms:play-services-ads:19.6.0"
+    implementation "com.google.android.gms:play-services-ads:20.1.0"
 
     //firebase analytics
     implementation "com.google.firebase:firebase-analytics:18.0.1"
@@ -131,9 +131,9 @@ dependencies {
 // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
-    implementation 'com.google.firebase:firebase-auth'
+  /*  implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.firebase:firebase-crashlytics'
+    */implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
