--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,13 +13,13 @@ android {
 
     defaultConfig {
         applicationId "com.johnmaricool.mario_designs"
-        minSdkVersion 22
+        minSdkVersion 21
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
         
         javaCompileOptions{
             annotationProcessorOptions{
@@ -62,6 +62,8 @@ kapt {
 
 
 dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.work:work-runtime:2.3.4'
@@ -127,6 +129,8 @@ dependencies {
     //gson dependency
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //glowing button
+    implementation 'com.github.SanojPunchihewa:GlowButton:1.0.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
 // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
