--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,15 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        
-        javaCompileOptions{
-            annotationProcessorOptions{
+
+        javaCompileOptions {
+            annotationProcessorOptions {
                 arguments["room.incremental"] = "true"
             }
         }
     }
 
-    lintOptions{
+    lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
@@ -41,16 +41,16 @@ android {
         }
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 
-    compileOptions{
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    kotlinOptions{
+    kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
@@ -66,16 +66,16 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.work:work-runtime:2.7.1'
-    def nav_version = "2.4.1"
+    def nav_version = "2.3.5"
     def lifecycle_version = "2.4.1"
 
     def work_version = "2.3.0"
     def room_version = "2.4.2"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //lifecycle components
@@ -102,8 +102,8 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
     //navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     //material design
     implementation 'com.google.android.material:material:1.2.1'
@@ -114,13 +114,12 @@ dependencies {
     //firebase analytics
     implementation "com.google.firebase:firebase-analytics:20.1.0"
 
-    //work manager
-    //noinspection GradleDependency
-    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     //dagger
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    kapt "com.google.dagger:dagger-android-processor:2.38.1"
+
 
     //hilt viewmodels
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
@@ -135,9 +134,7 @@ dependencies {
 // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
-  /*  implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    */implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
